testData/diagnostics/invalid_float_1.diag.txt
testData/diagnostics/invalid_float_1.nut line = (1) column = (8) : error: malformed number
println(1e4e-4)
        ^--

